# localrag

./: .env.example  .gitignore  CLAUDE.md  README.md  SCRAPER_USAGE.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: rag_engine.py  streamlit_app.py
config/: settings.py
indexer/: processor.py  run_indexing.py  scraper.py
