[project]
name = "localrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.2",
    "langchain==0.1.0",
    "langchain-community==0.0.10",
    "lxml==5.1.0",
    "ollama==0.1.6",
    "python-dotenv==1.0.0",
    "qdrant-client==1.7.0",
    "requests==2.31.0",
    "sentence-transformers==2.2.2",
    "streamlit==1.29.0",
    "tqdm==4.66.1",
]
